argocd/blog/deployment.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: blog-contrasting-org
  namespace: prod
  labels:
    app: blog-contrasting-org
    org.rm3l.services.service_name: blog-contrasting-org
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-contrasting-org
  serviceName: blog-contrasting-org
  template:
    metadata:
      labels:
        app: blog-contrasting-org
    spec:
      containers:
      - name: blog-contrasting-org
        image: gcr.io/badamscka/blog:0.1 
        ports:
        - name: liveness-port
          containerPort: 80 
        startupProbe:
          tcpSocket:
            port: liveness-port
          periodSeconds: 10
          failureThreshold: 30
        livenessProbe:
          tcpSocket:
            port: liveness-port
          initialDelaySeconds: 30
          periodSeconds: 90
          timeoutSeconds: 60
        readinessProbe:
          tcpSocket:
            port: liveness-port
          initialDelaySeconds: 30
          periodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: blog-contrasting-org
  namespace: prod
spec:
  selector:
    app: blog-contrasting-org
  ports:
    - protocol: TCP
      port: 80
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog 
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  rules:
  - host: blog.contrasting.org
    http:
      paths:
      - backend:
          serviceName: blog-contrasting-org
          servicePort: 80
  tls:
  - hosts:
    - blog.contrasting.org
    secretName: contrasting-org
